--- a/trunk/ssf/liferay/build.xml
+++ b/trunk/ssf/liferay/build.xml
@@ -2,14 +2,186 @@
 
 <project name="liferay" basedir="." default="compile">
 	<import file="../build-common.xml" />
+	
 	<import file="../deploy-support.xml" />
 	
 	<property name="jar.file" value="ssf-liferay.jar" />
+
+	<target name="clean">
+		<delete dir="temp" />
+	</target>
 	
+	<!-- Incremental deploy for ssf-liferay.jar -->
 	<target name="deploy" depends="jar">
 		<antcall target="deploy-jar-into-portal">
 			<param name="deploy-support.jar.file" value="${jar.file}" />
 		</antcall>
 	</target>
 
+	<target name="clean-app-server">
+		<delete>
+			<fileset dir="${app.server.lib.dir}" includes="ssf-*.jar" />
+		</delete>		
+		
+		<delete dir="${app.server.ssf.dir}"/>
+		<delete dir="${app.server.ssfs.dir}"/>
+	</target>
+	
+	<target name="init-liferay">
+		<if>
+			<equals arg1="${app.server.type}" arg2="tomcat" />
+			<then>
+				<path id="deploy.liferay.classpath">
+					<pathelement location="${env.ANT_HOME}/lib/ant.jar" />
+					<fileset dir="${app.server.lib.dir}" />
+					<pathelement location="${app.server.dir}/common/lib/servlet-api.jar" />
+				</path>
+				<property name="deploy.liferay.webinf" value="${app.server.dir}/liferay/WEB-INF" />
+				<property name="deploy.liferay.lib.dir" value="${app.server.lib.dir}" />
+			</then>
+			<elseif>
+				<equals arg1="${app.server.type}" arg2="jboss-tomcat" />
+				<then>
+					<path id="deploy.liferay.classpath">
+						<pathelement location="${app.server.deploy.dir}/ext.ear/portal-ejb.jar" />
+						<pathelement location="${env.ANT_HOME}/lib/ant.jar" />
+						<fileset dir="${app.server.deploy.dir}/ext.ear/lib" />
+						<pathelement location="${app.server.deploy.dir}/../lib/javax.servlet.jar" />
+					</path>
+					<property name="deploy.liferay.webinf" value="${app.server.deploy.dir}/ext.ear/portal-web-complete.war/WEB-INF" />
+					<property name="deploy.liferay.lib.dir" value="${app.server.deploy.dir}/ext.ear/lib" />
+				</then>
+			</elseif>
+		</if>	
+		<property name="deploy.liferay.portlet.tld" value="${deploy.liferay.webinf}/tld/liferay-portlet.tld" />
+		<property name="deploy.liferay.taglib.jar" value="${deploy.liferay.webinf}/lib/util-taglib.jar" />
+		<property name="deploy.liferay.util.jar" value="${deploy.liferay.lib.dir}/util-java.jar" />
+	</target>
+	
+	<target name="full-deploy">
+		<if>
+			<equals arg1="${app.server.type}" arg2="tomcat" />
+			<then>
+				<antcall target="deploy-liferay-tomcat" />
+			</then>
+			<elseif>
+				<equals arg1="${app.server.type}" arg2="jboss-tomcat" />
+				<then>
+					<antcall target="deploy-liferay-jboss-tomcat" />
+				</then>
+			</elseif>
+		</if>
+	</target>
+	
+	<!-- Deploy additional components that are not part of ssf web app -->
+	<target name="deploy-additional-components">
+		<!-- portal-module component is deployed directly into Liferay web app -->
+		<ant dir="${project.dir}/portal-module" target="deploy" inheritAll="false" />
+		<!-- liferay component is deployed directly into Liferay web app -->
+		<ant dir="${project.dir}/liferay" target="deploy" inheritAll="false" />
+		<!-- ssfs component is deployed into its own web app -->
+		<ant dir="${project.dir}/ssfs" target="deploy" inheritAll="false" />
+	</target>
+		
+	<target name="deploy-liferay-tomcat" depends="clean, init-liferay, clean-app-server">
+		<copy file="${project.dir}/war/ssf.war" todir="temp" />		
+		
+		<java
+			classname="com.liferay.portal.tools.PortletDeployer"
+			classpathref="deploy.liferay.classpath"
+			fork="true"
+			newenvironment="true">
+
+				<!-- Required Arguments -->
+
+				<jvmarg value="-Ddeployer.base.dir=temp/" />
+				<jvmarg value="-Ddeployer.dest.dir=${app.server.deploy.dir}" />
+				<jvmarg value="-Ddeployer.app.server.type=${app.server.type}" />
+				<jvmarg value="-Ddeployer.portlet.taglib.dtd=${deploy.liferay.portlet.tld}" />
+
+				<!-- Optional Arguments -->
+
+				<jvmarg value="-Ddeployer.jboss.prefix=1" />
+				<jvmarg value="-Ddeployer.tomcat.lib.dir=${app.server.dir}/common/lib/ext" />
+
+				<!-- Dependent Libraries -->
+
+				<arg value="${deploy.liferay.taglib.jar}" />
+				<arg value="${deploy.liferay.util.jar}" />
+				<!--<arg value="${app.server.deploy.dir}/ext.ear/lib/util-jsf.jar" />-->
+		</java>
+		
+		<delete dir="temp" />
+
+		<antcall target="deploy-additional-components" />
+		
+		<copy todir="${app.server.dir}" overwrite="true">
+			<fileset dir="resources/tomcat" />
+		</copy>
+		
+		<!-- TODO WE MUST USE ssfs.xml INSTEAD OF MODIFYING SERVER.XML!!! -->
+		<copy todir="${app.server.dir}" overwrite="true">
+			<fileset dir="${project.dir}/tomcat/resources" />
+		</copy>
+
+		<copy file="resources/tomcat.portal.properties" tofile="temp/portal.properties" overwrite="true" />
+		<jar destfile="${deploy.liferay.lib.dir}/portal-ejb.jar" basedir="temp" 
+			includes="portal.properties" update="true" />
+		
+		<!-- Copy jdom.jar file into our lib directory because jakarta Slide 
+		     requires jdom 1.0 while the version of the Liferay we deploy
+		     onto contains earlier version (beta 8?) of jdom. We should remove
+		     this line once we upgarde to a later version of Liferay that contains
+		     v1.0 of jdom. -->
+		<copy file="${project.dir}/lib/jdom.jar" todir="${app.server.ssf.dir}/WEB-INF/lib" />
+		<copy file="${project.dir}/lib/xalan.jar" todir="${app.server.dir}/common/endorsed" />
+		<copy file="${project.dir}/lib/jtds.jar" todir="${app.server.dir}/common/lib" />
+	</target>
+		
+	<target name="deploy-liferay-jboss-tomcat" depends="clean, init-liferay, clean-app-server">	
+		<copy file="${project.dir}/war/ssf.war" todir="temp" />		
+		
+		<java
+			classname="com.liferay.portal.tools.PortletDeployer"
+			classpathref="deploy.liferay.classpath"
+			fork="true"
+			newenvironment="true">
+
+				<!-- Required Arguments -->
+
+				<jvmarg value="-Ddeployer.base.dir=liferay/temp/" />
+				<jvmarg value="-Ddeployer.dest.dir=${app.server.deploy.dir}" />
+				<jvmarg value="-Ddeployer.app.server.type=${app.server.type}" />
+				<jvmarg value="-Ddeployer.portlet.taglib.dtd=${deploy.liferay.portlet.tld}" />
+
+				<!-- Optional Arguments -->
+
+				<jvmarg value="-Ddeployer.jboss.prefix=1" />
+				<!--<jvmarg value="-Ddeployer.tomcat.lib.dir=${app.server.dir}/common/lib/ext" />-->
+
+				<!-- Dependent Libraries -->
+
+				<arg value="${deploy.liferay.taglib.jar}" />
+				<arg value="${deploy.liferay.util.jar}" />
+				<!--<arg value="${app.server.deploy.dir}/ext.ear/lib/util-jsf.jar" />-->
+		</java>
+		
+		<delete dir="temp" />
+		
+		<antcall target="deploy-additional-components" />
+		
+		<!-- For SSF -->
+		<copy file="jboss/resources/ssf-ds.xml" todir="${app.server.deploy.dir}" />		
+		<copy file="jboss/resources/mail-service.liferay.ssf.xml" tofile="${app.server.deploy.dir}/mail-service.xml" />		
+		<!-- For Slide -->
+		<!--<copy file="jboss/resources/server.slide.xml" tofile="${app.server.deploy.dir}/jbossweb-tomcat55.sar/server.xml" />-->
+		<!--<copy file="jboss/resources/login-config.slide.xml" tofile="${app.server.dir}/server/default/conf/login-config.xml" />-->
+		<!--<move file="${app.server.deploy.dir}/slide.war/WEB-INF/lib/slide-jaas-2.1.jar" todir="${app.server.dir}/server/default/lib" failonerror="false" />-->
+		<!-- For Liferay -->
+		<copy file="liferay/changes/resources/jboss.web.xml" tofile="${deploy.liferay.webinf}/web.xml" />
+		<copy file="liferay/changes/resources/jboss.portal.properties" tofile="${app.server.deploy.dir}/ext.ear/portal-ejb.jar/portal.properties" />
+		<copy file="liferay/changes/resources/jboss.MANIFEST.MF" tofile="${app.server.deploy.dir}/ext.ear/portal-web-complete.war/META-INF/MANIFEST.MF" />
+		<copy file="${project.dir}/lib/jtds.jar" todir="${app.server.server.dir}/lib" />
+	</target>		
+	
 </project>
