--- a/ssf/ssfs/resources/slide-src/src/conf/webapp/slide.properties
+++ b/ssf/ssfs/resources/slide-src/src/conf/webapp/slide.properties
@@ -4,19 +4,19 @@
 
 # Automatically perform security checks
 # Default : true
-org.apache.slide.security=true
+org.apache.slide.security=false
 
 # Automatically perform locking checks
 # Default : true
-org.apache.slide.lock=true
+org.apache.slide.lock=false
 
 # Use version control (DeltaV)
 # Default: true
-org.apache.slide.versioncontrol=true
+org.apache.slide.versioncontrol=false
 
 # DASL
 # Default: true
-org.apache.slide.search=true
+org.apache.slide.search=false
 
 # Allow redirect reference resources
 # Default: true
